# ha-guide

./: .gitignore  .gitreview  README.rst  doc-test.conf  doc-tools-check-languages.conf  other-requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: pom.xml  requirements.txt
doc/glossary/: glossary-terms.xml
doc/glossary/locale/: ja.po
doc/ha-guide/: bk-ha-guide.xml  setup.cfg
doc/ha-guide/api/: section_api_pacemaker.xml  section_glance_api.xml  section_keystone.xml
doc/ha-guide/source/: compute-node-ha-api.rst  compute-node-ha.rst  conf.py  controller-ha-galera-manage.rst  controller-ha-galera.rst  controller-ha-haproxy.rst  controller-ha-keystone.rst  controller-ha-pacemaker.rst  controller-ha-rabbitmq.rst  controller-ha-telemetry.rst  controller-ha-vip.rst  controller-ha.rst  hardware-ha-basic.rst  hardware-ha.rst  index.rst  install-ha-memcached.rst  install-ha-ntp.rst  install-ha-os.rst  install-ha-vip.rst  install-ha.rst  intro-ha-arch-keepalived.rst  intro-ha-arch-pacemaker.rst  intro-ha-concepts.rst  intro-ha-controller.rst  intro-ha-storage.rst  mysql-ha.rst  networking-ha.rst  (+6 more)
doc/high-availability-guide/: bk-ha-guide.xml  ch_ha_aa_controllers.xml  ch_ha_aa_db.xml  ch_ha_aa_haproxy.xml  ch_ha_aa_network.xml  ch_ha_aa_rabbitmq.xml  ch_intro.xml  ch_network.xml  ch_pacemaker.xml  part_active_active.xml  part_active_passive.xml
doc/source/: conf.py  control-plane-stateless.rst  index.rst  storage-ha-backend.rst  storage-ha-block.rst  storage-ha-file-systems.rst  storage-ha-image.rst
tools/: build-all-rst.sh  generatepot  generatepot-rst.sh
(+38 files in other folders)
